Исправления после тестирования системы
