# internal/pb/api/v1/fields/fields.pb.gw.go
@@ -169,6 +169,58 @@ func local_request_Fields_GetFieldByID_0(ctx context.Context, marshaler runtime.
 
 }
 
+func request_Fields_GetFieldsByAuthor_0(ctx context.Context, marshaler runtime.Marshaler, client FieldsClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetFieldsByAuthor_Request
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["login"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "login")
+	}
+
+	protoReq.Login, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "login", err)
+	}
+
+	msg, err := client.GetFieldsByAuthor(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_Fields_GetFieldsByAuthor_0(ctx context.Context, marshaler runtime.Marshaler, server FieldsServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetFieldsByAuthor_Request
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["login"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "login")
+	}
+
+	protoReq.Login, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "login", err)
+	}
+
+	msg, err := server.GetFieldsByAuthor(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_Fields_DeleteField_0(ctx context.Context, marshaler runtime.Marshaler, client FieldsClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq DeleteField_Request
 	var metadata runtime.ServerMetadata
@@ -300,6 +352,31 @@ func RegisterFieldsHandlerServer(ctx context.Context, mux *runtime.ServeMux, ser
 		}
 
 		forward_Fields_GetFieldByID_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_Fields_GetFieldsByAuthor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/fields_api.api.v1.fields.Fields/GetFieldsByAuthor", runtime.WithHTTPPathPattern("/v1/fields/authors/{login}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Fields_GetFieldsByAuthor_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Fields_GetFieldsByAuthor_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -435,6 +512,28 @@ func RegisterFieldsHandlerClient(ctx context.Context, mux *runtime.ServeMux, cli
 
 	})
 
+	mux.Handle("GET", pattern_Fields_GetFieldsByAuthor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/fields_api.api.v1.fields.Fields/GetFieldsByAuthor", runtime.WithHTTPPathPattern("/v1/fields/authors/{login}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Fields_GetFieldsByAuthor_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Fields_GetFieldsByAuthor_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("DELETE", pattern_Fields_DeleteField_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -467,6 +566,8 @@ var (
 
 	pattern_Fields_GetFieldByID_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "fields", "id"}, ""))
 
+	pattern_Fields_GetFieldsByAuthor_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "fields", "authors", "login"}, ""))
+
 	pattern_Fields_DeleteField_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "fields", "id"}, ""))
 )
 
@@ -476,6 +577,8 @@ var (
 	forward_Fields_UpdateField_0 = runtime.ForwardResponseMessage
 
 	forward_Fields_GetFieldByID_0 = runtime.ForwardResponseMessage
+
+	forward_Fields_GetFieldsByAuthor_0 = runtime.ForwardResponseMessage
 
 	forward_Fields_DeleteField_0 = runtime.ForwardResponseMessage
 )
